Bug 235132 - css/css-transitions/changing-while-transition-004.html is a unique failure
Summary: css/css-transitions/changing-while-transition-004.html is a unique failure
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Animations (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antoine Quint
URL:
Keywords: InRadar
Depends on: 252312
Blocks: 235130
  Show dependency treegraph
 
Reported: 2022-01-12 12:13 PST by Antoine Quint
Modified: 2023-02-16 14:37 PST (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antoine Quint 2022-01-12 12:13:23 PST
WebKit has some unique failures for css/css-transitions/changing-while-transition-004.html. See https://wpt.fyi/results/css/css-transitions/changing-while-transition-004.html?label=experimental&label=master&aligned.
Comment 1 Radar WebKit Bug Importer 2022-01-19 12:23:13 PST
<rdar://problem/87785199>
Comment 2 Antoine Quint 2023-02-16 11:16:29 PST
Pull request: https://github.com/WebKit/WebKit/pull/10211
Comment 3 EWS 2023-02-16 14:37:44 PST
Committed 260398@main (72fbef832988): <https://commits.webkit.org/260398@main>

Reviewed commits have been landed. Closing PR #10211 and removing active labels.